--- a/style.css
+++ b/style.css
@@ -1,21 +1,14 @@
-
-
-
-body {
-    display: flex;
-    flex-direction: column;
-}
-
+/*Header styles*/
 
 .header {
     flex: auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 40px;
+    padding: 10px 20%;
 }
 
-.header-logo {
+.header div:first-child {
     font-size: 24px;
     color: #F9FAF8;
 }
@@ -26,47 +19,68 @@ body {
     list-style-type: none;
 }
 
-
-
 .header, .introduction {
     background-color: #1f2937;
 }
 
-.introduction {
-    padding: 40px;
-    display: flex;
+/*Introduction styles*/
 
+.introduction {
+    display: flex;
+    justify-content: center;
+    padding: 40px 20%;
+    gap: 40px;
 }
 
 .introduction * {
     flex: 1;
 }
 
+.introduction div:first-child {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+}
+
 .introduction-big {
     font-size: 48px;
-    font-weight: 1400;
+    font-weight: 900;
     color: #F9FAF8;
 }
 
 .introduction-subtext {
-    font-size: 24px;
+    font-size: 18px;
     color: #F9FAF8;
 }
 
+/*General*/
 
-
-
-
+body {
+    display: flex;
+    flex-direction: column;
+}
 
 button {
     padding: 4px 16px;
     border-radius: 10px;
     background-color: #3882f6;
     color: #F9FAF8;
-    border: 2px solid #F9FAF8;
+    font-size: 18px;
+    border: none;
 }
 
 a {
     text-decoration: none;
     color: #F9FAF8;
+}
+
+img {
+    height: 200px;
+    width: 300px;
+    background-color: #F9FAF8;
+}
+
+* {
+    font-family: 'Roboto', sans-serif;
 }
