--- a/style.css
+++ b/style.css
@@ -15,11 +15,11 @@
 
 .links {
     display: flex;
-    gap: 12px;
+    gap: 30px;
     list-style-type: none;
 }
 
-.header, .introduction {
+.header, .introduction, .bottom-bar {
     background-color: #1f2937;
 }
 
@@ -32,15 +32,11 @@
     gap: 40px;
 }
 
-.introduction * {
+.introduction > div {
     flex: 1;
-}
-
-.introduction div:first-child {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 10px;
 }
 
 .introduction-big {
@@ -54,11 +50,138 @@
     color: #F9FAF8;
 }
 
+#introduction-button {
+    padding: 4px 16px;
+    border-radius: 10px;
+    background-color: #3882f6;
+    color: #F9FAF8;
+    font-size: 18px;
+    border: none;
+}
+
+/*Image series*/
+
+.image-series {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
+    margin: 50px auto;
+}
+
+.img-row {
+    display: flex;
+    gap: 50px;
+}
+
+.image-series-title {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1f2937;
+}
+
+.img-rounded-corner {
+    height: 300px;
+    width: 200px;
+    border-color: #3882f6;
+    text-align: center;
+}
+
+.img-rounded-corner img{
+    height: 200px;
+    width: 200px;
+    border-radius: 15px;
+    border-style: solid;
+    border-color: #3882f6;
+}
+
+/*Quote area*/
+
+.quote-area {
+    background-color: #e5e7eb;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 200px 0;
+}
+
+.quote-text {
+    width: 50%;
+}
+
+.quote-quote {
+    text-align: justify;
+    font-size: 36px;
+    font-style: italic;
+    color: #1f2937;
+}
+
+.quote-author {
+    font-size: 20px;
+    font-weight: bold;
+    text-align: end;
+}
+
+/*Sign up area*/
+
+.sign-up-area {
+    margin: 80px 15%;
+}
+
+.sign-up-area > div {
+    background-color: #3882f6;
+    border-radius: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+    padding: 20px 80px;
+    height: 150px;
+}
+
+.sign-up-area-text {
+    flex: 2 0 0;
+    display: flex;
+    flex-direction: column;
+    color: #F9FAF8;
+}
+
+.sign-up-area-text div:first-child {
+    font-weight: bold;
+    font-size: 24px;
+}
+
+.sign-up-area-text div:last-child {
+    font-size: 16px;
+}
+
+.sign-up-button {
+    flex: 1 0 0;
+    padding: 4px 30px;
+    border-radius: 10px;
+    background-color: #3882f6;
+    color: #F9FAF8;
+    font-size: 18px;
+    border: solid white;
+}
+
+/*Bottom bar*/
+.bottom-bar {
+    display: flex;
+    justify-content: center;
+    padding: 2vh 2vh;
+}
+
+.bottom-bar > div {
+    color: #F9FAF8;
+}
+
 /*General*/
 
 body {
     display: flex;
     flex-direction: column;
+    margin: 0%;
 }
 
 button {
